--- a/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/ortese-protese/ortese-protese.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/tipo-procedimento/ortese-protese/ortese-protese.component.html
@@ -1,8 +1,8 @@
-<form [formGroup]="orteseProteseForm">
+<form [formGroup]="itemPrescricaoProcedimento">
     <div class="ui-g-12">
         <div class="ui-g-6">
             <span class="md-inputfield">
-                <p-dropdown placeholder="Selecione..." [options]="listaOrtesesProteses" formControlName="decricao"
+                <p-dropdown placeholder="Selecione..." [options]="listaOrtesesProteses" formControlName="tipoProcedimentoId"
                     #orteseProtese>
                 </p-dropdown>
                 <label>Órteses/Próteses</label>
