--- a/frontend/src/app/prescricao-medica/procedimento-especial/procedimento-especial.component.html
+++ b/frontend/src/app/prescricao-medica/procedimento-especial/procedimento-especial.component.html
@@ -1,122 +1,117 @@
 <div class="ui-g ui-fluid">
     <div class="ui-g-12">
-        <p-accordion>
-            <p-accordionTab header="Procedimento" [selected]="true">
-                <form>
-                    <div class="ui-g">
-                        <div class="ui-g-12">
+        <form (ngSubmit)="prescrever()">
+            <p-accordion >
+                <p-accordionTab header="Procedimento" [selected]="true">
+                    <form [formGroup]="prescricaoProcedimento">
+                        <div class="ui-g">
                             <div class="ui-g-12">
-                                <span class="md-inputfield">
-                                    <input [(ngModel)]="paciente" name="idPaciente" type="text" pInputText disabled />
-                                    <label>Paciente</label>
-                                </span>
+                                <div class="ui-g-12">
+                                    <span class="md-inputfield">
+                                        <input [(ngModel)]="paciente" formControlName="idPaciente" type="text" pInputText
+                                            disabled />
+                                        <label>Paciente</label>
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="ui-g-12">
                             <div class="ui-g-12">
-                                <span class="md-inputfield">
-                                    <textarea [rows]="6" [cols]="30" pInputTextarea autoResize="autoResize"
-                                        id="observacao" name="observacao"></textarea>
-                                    <label>Observações</label>
-                                </span>
+                                <div class="ui-g-12">
+                                    <span class="md-inputfield">
+                                        <textarea [rows]="6" [cols]="30" pInputTextarea autoResize="autoResize"
+                                            id="observacao" formControlName="observacao"></textarea>
+                                        <label>Observações</label>
+                                    </span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </form>
-            </p-accordionTab>
+                    </form>
+                </p-accordionTab>
 
-            <p-accordionTab header="Item Procedimento">
-                <form [formGroup]="itemPrescricaoProcedimento" (ngSubmit)="incluirItem()">
-                    <div class="ui-g">
-                        <div class="ui-g-12">
-                            <div class="ui-g-10">
-                                <p-selectButton [options]="tipoProcedimento" formControlName="tipoProcedimento" #tipo>
-                                </p-selectButton>
+                <p-accordionTab header="Item Procedimento">
+                    <form [formGroup]="itemPrescricaoProcedimento" (ngSubmit)="incluirItem()">
+                        <div class="ui-g">
+                            <div class="ui-g-12">
+                                <div class="ui-g-10">
+                                    <p-selectButton [options]="tipoProcedimento" formControlName="tipoProcedimentoEspecial"
+                                        #tipo>
+                                    </p-selectButton>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="ui-g-12">
+                            <div class="ui-g-12">
 
-                            <app-diversos [especiaisDiversosForm]="especiaisDiversosForm"
-                                *ngIf="tipo.value === 'DIVERSOS'"></app-diversos>
+                                <app-diversos [itemPrescricaoProcedimento]="itemPrescricaoProcedimento"
+                                    *ngIf="tipo.value === 'DIVERSOS'"></app-diversos>
 
-                            <app-cirurgias-leito [cirurgiasLeitoForm]="cirurgiasLeitoForm"
-                                *ngIf="tipo.value === 'CIRURGIAS_LEITO'"></app-cirurgias-leito>
+                                <app-cirurgias-leito [itemPrescricaoProcedimento]="itemPrescricaoProcedimento"
+                                    *ngIf="tipo.value === 'CIRURGIAS_LEITO'"></app-cirurgias-leito>
 
-                            <app-ortese-protese [orteseProteseForm]="orteseProteseForm"
-                                *ngIf="tipo.value === 'ORTESES_PROTESES'"></app-ortese-protese>
+                                <app-ortese-protese [itemPrescricaoProcedimento]="itemPrescricaoProcedimento"
+                                    *ngIf="tipo.value === 'ORTESES_PROTESES'"></app-ortese-protese>
 
-                        </div>
+                            </div>
 
-                        <div class="ui-g-12">
+                            <div class="ui-g-12">
+                                <div class="ui-g-6">
+                                    <span class="md-inputfield">
+                                        <input type="text" pInputText formControlName="informacoes" />
+                                        <label>Informações Complementares</label>
+                                    </span>
+                                </div>
+                            </div>
+
+                            <div class="ui-g-12">
+                                <div class="ui-g-6">
+                                    <span class="md-inputfield">
+                                        <input type="text" pInputText formControlName="justificativa" />
+                                        <label>Justificativa</label>
+                                    </span>
+                                </div>
+
+                                <div class="ui-g-4">
+                                    <span class="md-inputfield">
+                                        <input type="number" pInputText formControlName="duracaoSolicitada" />
+                                        <label>Duração</label>
+                                    </span>
+                                </div>
+                            </div>
+
                             <div class="ui-g-6">
-                                <span class="md-inputfield">
-                                    <input type="text" pInputText formControlName="informacoes" />
-                                    <label>Informações Complementares</label>
-                                </span>
-                            </div>
-                        </div>
-
-                        <div class="ui-g-12">
-                            <div class="ui-g-6">
-                                <span class="md-inputfield">
-                                    <input type="text" pInputText formControlName="justificativa" />
-                                    <label>Justificativa</label>
-                                </span>
+                                <button label="Adicionar" pButton name="adicionar-item" type="submit"
+                                    [disabled]="itemPrescricaoProcedimento.invalid">
+                                </button>
                             </div>
 
-                            <div class="ui-g-4">
-                                <span class="md-inputfield">
-                                    <input type="number" pInputText formControlName="duracaoSolicitada" />
-                                    <label>Duração</label>
-                                </span>
+                            <div class="ui-g-12">
+                                <basis-datatable type="memory" [value]="itensPrescricaoProcedimento"
+                                    [disableView]="true" [disableEdit]="true" [disableDelete]="true"
+                                    [verticalButtons]="false">
+                                    <p-column header="Procedimento" field="tipoProcedimentoId">
+                                        <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                                            <span>
+                                                {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
+                                        </ng-template>
+                                    </p-column>
+
+                                    <p-column header="Informações" field="informacoes"></p-column>
+                                    <p-column header="Justificativa" field="justificativa"></p-column>
+                                    <p-column header="Duração" field="duracaoSolicitada"></p-column>
+                                </basis-datatable>
+
                             </div>
                         </div>
+                    </form>
+                </p-accordionTab>
+            </p-accordion>
 
-                        <div class="ui-g-6">
-                            <button label="Adicionar" pButton name="adicionar-item" type="submit"
-                                [disabled]="itemPrescricaoProcedimento.invalid">
-                            </button>
-                        </div>
+            <div class="ui-g-12">
+                <div class="ui-g-6">
+                    <button pButton type="submit" label="Prescrever">
+                    </button>
 
-                        <div class="ui-g-12">
-                            <basis-datatable type="memory" [value]="itensPrescricaoProcedimento" [disableView]="true"
-                                [disableEdit]="true" [disableDelete]="true" [verticalButtons]="false">
-                                <p-column header="Especial Diversos" field="especiaisDiversosId">
-                                    <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                                        <span> {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
-                                    </ng-template>
-                                </p-column>
-
-                                <p-column header="Cirurgias" field="cirurgiasLeitoId">
-                                    <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                                        <span> {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
-                                    </ng-template>
-                                </p-column>
-
-                                <p-column header="Órteses/Próteses" field="orteseProteseId">
-                                    <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                                        <span> {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].decricao }}</span>
-                                    </ng-template>
-                                </p-column>
-
-                                <p-column header="Informações" field="informacoes"></p-column>
-                                <p-column header="Justificativa" field="justificativa"></p-column>
-                                <p-column header="Duração" field="duracaoSolicitada"></p-column>
-                            </basis-datatable>
-
-                        </div>
-                    </div>
-                </form>
-            </p-accordionTab>
-        </p-accordion>
-
-        <div class="ui-g-12">
-            <div class="ui-g-6">
-                <button pButton type="submit" label="Prescrever">
-                </button>
-
+                </div>
             </div>
-        </div>
+        </form>
+
     </div>
 </div>
