Ultimos ajustes em validações

--- a/frontend/src/app/pacientes/components/formulario-paciente/cartao-sus/cartao-sus.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/cartao-sus/cartao-sus.component.html
@@ -5,7 +5,7 @@
                 <p-inputMask
                     pInputText
                     formControlName="numero"
-                    mask="99999999999 9999"
+                    mask="999999999999999"
                     placeholder="___ ____ ____ ____"
                     pTooltip="Informe o número do Cartão SUS (CNS)."
                 ></p-inputMask>
