Adiciona campo de paciente id ao solicitar internação e internar paciente

--- a/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
+++ b/frontend/src/app/internacao/components/internacao-de-paciente/internacao-de-paciente.component.html
@@ -5,7 +5,7 @@
                 <!-- [Prontuário & Nome](Preenchido pelo sistema) read-only -->
                 <div class="ui-g-2">
                     <label>Prontuário</label>
-                    <input type="text" pInputText [disabled]="true" />
+                    <input type="text" pInputText formControlName="prontuario" [disabled]="true" />
                 </div>
                 <div class="ui-g-3">
                     <label>Nome do Paciente</label>
