--- a/frontend/src/app/internacao/components/solicitacoes-de-internacao/solicitacoes-de-internacao.component.html
+++ b/frontend/src/app/internacao/components/solicitacoes-de-internacao/solicitacoes-de-internacao.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g ui-fluid">
     <div class="ui-g-12">
         <div class="card card-w-title">
-            <h1>Solicitações de Internação</h1>
+            <h1>Internar Paciente</h1>
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-12 ui-fluid">
                     <span class="md-inputfield" style="margin-top: 5px;">
