alteração de cadartro de medicamento

--- a/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
+++ b/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
@@ -4,7 +4,7 @@
             <h1>Prescrição Médica</h1>
         </div>
         <div class="ui-g-12">
-            <div class="ui-g-2 ui-sm-12">
+            <!-- <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
                     <input
                         pInputText
@@ -14,7 +14,7 @@
                     />
                     <label>Prontuário</label>
                 </span>
-            </div>
+            </div> -->
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
                     <input pInputText type="text" pTooltip="Informe o Nome." [(ngModel)]="nome" />
@@ -65,11 +65,10 @@
             </div>
         </div>
         <basis-datatable type="memory" [value]="Prescricao" sortField="brand">
-            <p-column header="Prontuário" field="id"></p-column>
+            <!-- <p-column header="Prontuário" field="id"></p-column> -->
             <p-column header="Paciente" field="nome" [sortable]="true"></p-column>
             <p-column header="Localização" field="local"></p-column>
             <p-column header="Início Prescrição" field="dataInicio"></p-column>
-            <p-column header="Fim Prescrição" field="dataFim"></p-column>
         </basis-datatable>
     </div>
 </div>
