--- a/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
+++ b/frontend/src/app/farmacia/farmacia/cadastro-medicamento/cadastro-medicamento.component.html
@@ -73,7 +73,7 @@
                     </span>
                 </div>
             </div>
-            <div class="ui-g-12">
+            <!-- <div class="ui-g-12">
                 <div class="ui-g-5 ui-sm-12">
                     <span class="ui-float-label">
                         <p-autoComplete
@@ -87,7 +87,7 @@
                         <label>Tipo</label>
                     </span>
                 </div>
-            </div>
+            </div> -->
             <div class="ui-g-12">
                 <h3>Situação</h3>
                 <p-radioButton
