Ajuste para salvar apenas o id de medicamento no banco de dados - BASIS-128436

--- a/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
+++ b/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
@@ -9,8 +9,8 @@
                             <div class="ui-g-12">
                                 <div class="ui-g-12">
                                     <span class="md-inputfield">
-                                        <input [(ngModel)]="paciente" formControlName="idPaciente" type="text" pInputText
-                                            disabled />
+                                        <input [(ngModel)]="paciente" formControlName="idPaciente" type="text"
+                                            pInputText disabled />
                                         <label>Paciente</label>
                                     </span>
                                 </div>
@@ -32,20 +32,17 @@
                     <form [formGroup]="itemPrescricaoMedicamento" (ngSubmit)="incluirItem()">
                         <div class="ui-g">
                             <div class="ui-g-12">
-                                <div class="ui-g-6">
+                                <div class="ui-g-8">
                                     <span class="md-inputfield">
-                                        <p-dropdown placeholder="Selecione..." [options]="medicamentos"
-                                            formControlName="idMedicamento" required #idMedicamento>
-                                        </p-dropdown>
+                                        <p-autoComplete
+                                            field="nome" 
+                                            [suggestions]="medicamentos"
+                                            (completeMethod)="carregarMedicamentos($event)" formControlName="idMedicamento"
+                                            [dropdown]="true"
+                                            dataKey="id"
+                                            >
+                                        </p-autoComplete>
                                         <label>Medicamentos</label>
-                                    </span>
-                                </div>
-                                <div class="ui-g-6">
-                                    <span class="md-inputfield">
-                                        <p-dropdown placeholder="Selecione..." [options]="listaMedicamentos"
-                                            formControlName="idListaMedicamentos" required #idListaMedicamento>
-                                        </p-dropdown>
-                                        <label>Lista Medicamentos</label>
                                     </span>
                                 </div>
                             </div>
@@ -53,7 +50,7 @@
                             <div class="ui-g-12">
                                 <div class="ui-g-3">
                                     <span class="md-inputfield">
-                                        <input type="text" pInputText formControlName="dose" />
+                                        <input type="number" pInputText formControlName="dose" />
                                         <label>Dose</label>
                                     </span>
                                 </div>
@@ -229,7 +226,7 @@
                                     [disableEdit]="true" [disableDelete]="true" [verticalButtons]="false">
                                     <p-column header="Medicamentos" field="idMedicamento">
                                         <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                                            <span> {{ rowData[col.field].name }}</span>
+                                            <span> {{ rowData[col.field].nome }}</span>
                                         </ng-template>
                                     </p-column>
 
@@ -263,27 +260,8 @@
 
                                     <p-column header="Diluente" field="diluenteId">
                                         <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                                            <span> {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
-                                        </ng-template>
-                                    </p-column>
-
-                                    <p-column header="Volume (ml)" field="volume"></p-column>
-
-                                    <p-column header="Correr em" field="tempoInfusao"></p-column>
-
-                                    <p-column header="Unid. Tempo" field="unidadeTempo"></p-column>
-
-                                    <p-column header="Velocidade" field="velocidadeInfusao"></p-column>
-
-                                    <p-column header="Unid. Infusão" field="unidadeInfusaoId">
-                                        <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                                            <span> {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
-                                        </ng-template>
-                                    </p-column>
-
-                                    <p-column header="Bomba de Infusão" field="bombaInfusao">
-                                        <ng-template let-l="rowData" pTemplate="body">
-                                            <span href="javascript:;">{{l.bombaInfusao ? 'Sim' : 'Não'}}</span>
+                                            <span>
+                                                {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
                                         </ng-template>
                                     </p-column>
 
