--- a/frontend/src/app/internacao/components/solicitacoes-de-internacao/solicitacoes-de-internacao.component.html
+++ b/frontend/src/app/internacao/components/solicitacoes-de-internacao/solicitacoes-de-internacao.component.html
@@ -30,7 +30,7 @@
                     (buttonClick)="onButtonClick($event)"
                     #datatable
                 >
-                    <p-column header="Prontuário" field="prontuario"></p-column>
+                    <p-column header="Identificador" field="pacienteId"></p-column>
                     <p-column header="Nome do Paciente" field="nomeDoPaciente"></p-column>
                     <p-column header="Prioridade" field="prioridade">
                         <ng-template let-col let-data="rowData" pTemplate="body">
