Teste de merge e pull da branch

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.html
@@ -2,7 +2,7 @@
     <div class="ui-g-12">
         <app-classificacao-de-risco [formTriagem]="formTriagem"></app-classificacao-de-risco>
     </div>
-    <div class="ui-g-12">
+    <div class="ui-g-12 ui-float-label">
         <div class="ui-g-12">
             <div class="ui-g-12 ui-sm-12">
                 <span class="ui-float-label">
