--- a/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
@@ -3,15 +3,14 @@
         <div class="ui-g-12">
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
-                    <p-autoComplete
-                        (completeMethod)="searchUnidade($event)"
-                        [disabled]="!endereco.value.uf"
-                        field="nome"
-                        [suggestions]="municipios"
-                        [dropdown]="true"
-                        formControlName="municipioId"
-                    ></p-autoComplete>
-                    <label>Municípios</label>
+                    <p-dropdown
+                        (onChange)="aoSelecionarUF()"
+                        [options]="ufs"
+                        optionLabel="sigla"
+                        formControlName="uf"
+                        [filter]="true"
+                        placeholder="UF"
+                    ></p-dropdown>
                 </span>
             </div>
             <div class="ui-g-5 ui-sm-12">
@@ -29,14 +28,15 @@
         <div class="ui-g-12">
             <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
-                    <p-dropdown
-                        (onChange)="aoSelecionarUF()"
-                        [options]="ufs"
-                        optionLabel="sigla"
-                        formControlName="uf"
-                        [filter]="true"
-                        placeholder="UF"
-                    ></p-dropdown>
+                    <p-autoComplete
+                        (completeMethod)="searchUnidade($event)"
+                        [disabled]="!endereco.value.uf"
+                        field="nome"
+                        [suggestions]="municipios"
+                        [dropdown]="true"
+                        formControlName="municipioId"
+                    ></p-autoComplete>
+                    <label>Municípios</label>
                 </span>
             </div>
             <div class="ui-g-4 ui-sm-12">
@@ -138,7 +138,11 @@
                 </ng-template>
             </p-column>
             <p-column header="CEP" field="cep"></p-column>
-            <p-column header="UF" field="municipio.ufId"></p-column>
+            <p-column header="UF" field="uf">
+                <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                    <span> {{ rowData[col.field].unidadeFederativa }}</span>
+                </ng-template>
+            </p-column>
             <p-column header="Bairro" field="bairro"></p-column>
             <p-column header="Tipo" field="tipoDoEndereco"></p-column>
             <p-column header="Correspondência" field="correspondencia"></p-column>
