adiciona receber menssagem do kafica

--- a/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
+++ b/frontend/src/app/farmacia/farmacia/dispensacao/dispensacao.component.html
@@ -28,12 +28,12 @@
                     <label>Data da Prescrição</label>
                 </span>
             </div>
-            <div class="ui-g-2 ui-sm-12">
+            <!-- <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
                     <input pInputText type="text" pTooltip="Informe o Local." [(ngModel)]="local" />
                     <label>Local</label>
                 </span>
-            </div>
+            </div> -->
             <!-- <div class="ui-g-2 ui-sm-12">
                 <span class="ui-float-label">
                     <p-autoComplete
@@ -67,7 +67,7 @@
         <basis-datatable type="memory" [value]="Prescricao" sortField="brand">
             <!-- <p-column header="Prontuário" field="id"></p-column> -->
             <p-column header="Paciente" field="nome" [sortable]="true"></p-column>
-            <p-column header="Localização" field="local"></p-column>
+            <!-- <p-column header="Localização" field="local"></p-column> -->
             <p-column header="Início Prescrição" field="dataInicio"></p-column>
         </basis-datatable>
     </div>
